[project]
name = "omniscient"
version = "0.1.0"
description = "A File Management System fot Creative Tasks"
authors = [
    {name = "llastkrakw",email = "llastkrakw21@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
